Fixed bug with button prev and next on mobile devices

--- a/GoldSilver.WebUI/Content/style.css
+++ b/GoldSilver.WebUI/Content/style.css
@@ -517,6 +517,11 @@ description-to-show-icons button {
 
 /* Product details */
 
+
+.left-arrow {
+    z-index: 100;
+}
+
 .product {
     height: 321px;
 }
